--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="" class="logo"><span class="logo-accent">Web</span>Studio</a>
+            <a href="" class="logo header__logo"><span class="logo-accent">Web</span>Studio</a>
         
             <nav class="site-nav">
-                <ul class="list">
-                    <li class="site-nav-item"> <a class="site-nav-link current-page"href="">Студия </a> </li>
-                    <li class="site-nav-item"> <a class="site-nav-link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="site-nav-item"> <a class="site-nav-link" href="">Контакты</a></li>
+                <ul class="site-nav__list list">
+                    <li class="site-nav__item"> <a class="site-nav__link current-page"href="">Студия </a> </li>
+                    <li class="site-nav__item"> <a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="site-nav__item"> <a class="site-nav__link" href="">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="list contacts">
-                    <li class="contact-item">
-                         <a href="mailto:info@devstudio.com" class="contact-link">
-                            <svg class="contact-icon" width="16" height="12">
+                    <li class="contacts__item">
+                         <a href="mailto:info@devstudio.com" class="contacts__link">
+                            <svg class="contacts__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope"></use>
                             </svg> info@devstudio.com</a> </li>
-                    <li class="contact-item"><a href="tel:+380961111111" class="contact-link"><svg class="contact-icon" width="10" height="16">
+                    <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link"><svg class="contacts__icon" width="10" height="16">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
                 </ul>
@@ -39,128 +39,128 @@
          <!-- Герой -->
         <section class="hero section">
             <div class="container">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button data-modal-open type="button" class="hero-button">Заказать услугу</button>
+                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                <button data-modal-open type="button" class="hero__button">Заказать услугу</button>
             </div>    
         </section>
         <!--Преимущетва  -->
-        <section class="features-section section">
+        <section class="features section">
             <div class="container">
-                <h2 class="features-section-title">Преимущества</h2>
-                <ul class="feature-list">
-                    <li class="feature-list-item">
-                        <div class="feature-icon-container">
+                <h2 class="visually-hidden">Преимущества</h2>
+                <ul class="features__list">
+                    <li class="features__item">
+                        <div class="features__icon-container">
                             <svg width="65.32" height="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div> 
-                        <h3 class="feature-title">Внимание к деталям</h3>
-                        <p class="feature-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="features__title">Внимание к деталям</h3>
+                        <p class="features__description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="feature-list-item">
-                        <div class="feature-icon-container">
+                    <li class="features__item">
+                        <div class="features__icon-container">
                             <svg width="66.96" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div> 
-                        <h3 class="feature-title">Пунктуальность</h3>
-                        <p class="feature-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="features__title">Пунктуальность</h3>
+                        <p class="features__description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="feature-list-item">
-                        <div class="feature-icon-container">
+                    <li class="features__item">
+                        <div class="features__icon-container">
                             <svg width="70" height="63.59">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div> 
-                        <h3 class="feature-title">Планирование</h3>
-                        <p class="feature-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="features__title">Планирование</h3>
+                        <p class="features__description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="feature-list-item">
-                        <div class="feature-icon-container">
+                    <li class="features__item">
+                        <div class="features__icon-container">
                             <svg width="70" height="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div> 
-                        <h3 class="feature-title">Современные технологии</h3>
-                        <p class="feature-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="features__title">Современные технологии</h3>
+                        <p class="features__description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>   
         </section>
         <!-- Чем мы занимаемся -->
-        <section class="directions-section section">
+        <section class="directions section">
             <div class="container">
-                <h2 class="directions-section-title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li class="directions-item">
+                <h2 class="directions__title">Чем мы занимаемся</h2>
+                <ul class="directions__list list">
+                    <li class="directions__item">
                        <img src="./images/programming.jpg" alt="программирование" width="370">
-                        <div class="direction-overlay"><p class="overlay-text">Десктопные приложения</p></div>
+                        <div class="directions__overlay"><p class="directions__text">Десктопные приложения</p></div>
                     </li>
-                    <li class="directions-item">
+                    <li class="directions__item">
                         <img src="./images/adapting.jpg" alt="адаптация" width="370">
-                        <div class="direction-overlay"><p class="overlay-text">Мобильные приложения</p></div>
+                        <div class="directions__overlay"><p class="directions__text">Мобильные приложения</p></div>
                     </li>
-                    <li class="directions-item">
+                    <li class="directions__item">
                         <img src="./images/styling.jpg" alt="стилизация" width="370">
-                        <div class="direction-overlay"><p class="overlay-text">Дизайнеркие решения</p></div>
+                        <div class="directions__overlay"><p class="directions__text">Дизайнеркие решения</p></div>
                     </li>
                 </ul>
             </div>
         </section>
         <!-- Наша команда -->
-        <section class="members-section section">
+        <section class="members section">
             <div class="container">
-                <h2 class="members-section-title">Наша команда</h2>
+                <h2 class="members__title">Наша команда</h2>
                 <ul class="members-list list">
-                    <li class="members-list-item">
+                    <li class="members-list__item">
                         <img src="./images/igor.demianenko.jpg" alt="Игорь Демьяненко" width="270">
-                        <div>
-                            <h3 class="member-name">Игорь Демьяненко</h3>
-                            <p lang="en" class="member-description">Product Designer</p>
+                        <div class="members-list__item-wrapper">
+                            <h3 class="members-list__name">Игорь Демьяненко</h3>
+                            <p lang="en" class="members-list__description">Product Designer</p>
                             <ul class="soc-media-list list">
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="members-list-item">
+                    <li class="members-list__item">
                         <img src="./images/olga.repina.jpg" alt="Ольга Репина" width="270">
-                        <div>
-                            <h3 class="member-name">Ольга Репина</h3>
-                            <p lang="en" class="member-description">Frontend Developer</p>
+                        <div class="members-list__item-wrapper">
+                            <h3 class="members-list__name">Ольга Репина</h3>
+                            <p lang="en" class="members-list__description">Frontend Developer</p>
                             <ul class="soc-media-list list">
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="members-list-item">
+                    <li class="members-list__item">
                         <img src="./images/nikolay.tarasov.jpg" alt="Николай Тарасов" width="270">
-                        <div>
-                            <h3 class="member-name">Николай Тарасов</h3>
-                            <p lang="en" class="member-description">Marketing</p>
+                        <div class="members-list__item-wrapper">
+                            <h3 class="members-list__name">Николай Тарасов</h3>
+                            <p lang="en" class="members-list__description">Marketing</p>
                             <ul class="soc-media-list list">
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="members-list-item">
+                    <li class="members-list__item">
                         <img src="./images/mikhail.iermakov.jpg" alt="Михаил Ермаков" width="270">
-                        <div>
-                            <h3 class="member-name">Михаил Ермаков</h3>
-                            <p lang="en" class="member-description">UI Designer</p>
+                        <div class="members-list__item-wrapper">
+                            <h3 class="members-list__name">Михаил Ермаков</h3>
+                            <p lang="en" class="members-list__description">UI Designer</p>
                             <ul class="soc-media-list list">
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-item"><a href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
