--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="" class="logo header__logo"><span class="logo-accent">Web</span>Studio</a>
+            <a href="" class="logo header__logo"><span class="logo--accent">Web</span>Studio</a>
         
             <nav class="site-nav">
                 <ul class="site-nav__list list">
-                    <li class="site-nav__item"> <a class="site-nav__link current-page"href="">Студия </a> </li>
+                    <li class="site-nav__item"> <a class="site-nav__link site-nav__link--current"href="">Студия </a> </li>
                     <li class="site-nav__item"> <a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
                     <li class="site-nav__item"> <a class="site-nav__link" href="">Контакты</a></li>
                 </ul>
@@ -117,11 +117,11 @@
                         <div class="members-list__item-wrapper">
                             <h3 class="members-list__name">Игорь Демьяненко</h3>
                             <p lang="en" class="members-list__description">Product Designer</p>
-                            <ul class="soc-media-list list">
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                            <ul class="soc-media__list list">
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
@@ -130,11 +130,11 @@
                         <div class="members-list__item-wrapper">
                             <h3 class="members-list__name">Ольга Репина</h3>
                             <p lang="en" class="members-list__description">Frontend Developer</p>
-                            <ul class="soc-media-list list">
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                            <ul class="soc-media__list list">
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
@@ -143,11 +143,11 @@
                         <div class="members-list__item-wrapper">
                             <h3 class="members-list__name">Николай Тарасов</h3>
                             <p lang="en" class="members-list__description">Marketing</p>
-                            <ul class="soc-media-list list">
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                            <ul class="soc-media__list list">
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
@@ -156,11 +156,11 @@
                         <div class="members-list__item-wrapper">
                             <h3 class="members-list__name">Михаил Ермаков</h3>
                             <p lang="en" class="members-list__description">UI Designer</p>
-                            <ul class="soc-media-list list">
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                                <li class="soc-media-list__item"><a class="soc-media-list__link" href=""><svg class="soc-media-list__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                            <ul class="soc-media__list list">
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                                <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                             </ul>
                         </div>
                     </li>
@@ -168,16 +168,16 @@
             </div>    
         </section>
         <!-- Постоянные клиенты -->
-        <section class="clients-section section">
+        <section class="clients section">
             <div class="container">
-                <h2 class="clients-section-title">Поcтоянные клиенты</h2>
+                <h2 class="clients__title">Поcтоянные клиенты</h2>
                 <ul class="clients-list list">
-                    <li><a href=""><svg class="client-icon" width="41" height="46.7"><use href="./images/icons.svg#icon-logo-one"></use></svg></a></li>
-                    <li><a href=""><svg class="client-icon" width="40" height="52"><use href="./images/icons.svg#icon-logo-two"></use></svg></a></li>
-                    <li><a href=""><svg class="client-icon" width="43.46" height="41.18"><use href="./images/icons.svg#icon-logo-three"></use></svg></a></li>
-                    <li><a href=""><svg class="client-icon" width="84.44" height="40.62"><use href="./images/icons.svg#icon-logo-four"></use></svg></a></li>
-                    <li><a href=""><svg class="client-icon" width="62.54" height="45.43"><use href="./images/icons.svg#icon-logo-five"></use></svg></a></li>
-                    <li><a href=""><svg class="client-icon" width="93.79" height="43.93"><use href="./images/icons.svg#icon-logo-six"></use></svg></a></li>
+                    <li class="clients-list__item"><a class="clients-list__link" href=""><svg class="clients-list__icon" width="41" height="46.7"><use href="./images/icons.svg#icon-logo-one"></use></svg></a></li>
+                    <li class="clients-list__item"><a class="clients-list__link" href=""><svg class="clients-list__icon" width="40" height="52"><use href="./images/icons.svg#icon-logo-two"></use></svg></a></li>
+                    <li class="clients-list__item"><a class="clients-list__link" href=""><svg class="clients-list__icon" width="43.46" height="41.18"><use href="./images/icons.svg#icon-logo-three"></use></svg></a></li>
+                    <li class="clients-list__item"><a class="clients-list__link" href=""><svg class="clients-list__icon" width="84.44" height="40.62"><use href="./images/icons.svg#icon-logo-four"></use></svg></a></li>
+                    <li class="clients-list__item"><a class="clients-list__link" href=""><svg class="clients-list__icon" width="62.54" height="45.43"><use href="./images/icons.svg#icon-logo-five"></use></svg></a></li>
+                    <li class="clients-list__item"><a class="clients-list__link" href=""><svg class="clients-list__icon" width="93.79" height="43.93"><use href="./images/icons.svg#icon-logo-six"></use></svg></a></li>
                 </ul>
             </div>
         </section>
@@ -186,22 +186,22 @@
     <footer class="footer">
         <div class="container">
             <div class="adress-container">
-                <a href="" class="logo"><span class="logo-accent">Web</span>Studio</a>
+                <a href="" class="logo footer__logo"><span class="logo--accent">Web</span>Studio</a>
                 <address class="address">
-                <p class="address-main"> г. Киев, пр-т Леси Украинки, 26</p>
-                    <ul class="list">
-                        <li><a href="mailto:info@example.com" class="address-link">info@example.com</a></li>
-                        <li class="phone"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
+                <p class="address__main"> г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="adress__list list">
+                        <li><a href="mailto:info@example.com" class="address__link">info@example.com</a></li>
+                        <li><a href="tel:+380991111111" class="address__link">+38 099 111 11 11</a></li>
                     </ul>    
                 </address>
             </div>
-            <div class="soc-media-container">
-                <h2 class="soc-media-title">присоединяйтесь</h2>
-                <ul class="soc-media-list list">
-                    <li class="soc-media-item"><a class="footer-media-link" href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-                    <li class="soc-media-item"><a class="footer-media-link" href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-                    <li class="soc-media-item"><a class="footer-media-link" href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-                    <li class="soc-media-item"><a class="footer-media-link" href=""><svg class="soc-media-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+            <div class="soc-media">
+                <h2 class="soc-media__title">присоединяйтесь</h2>
+                <ul class="soc-media__list list">
+                    <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon soc-media__icon--dark" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                    <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon soc-media__icon--dark" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                    <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon soc-media__icon--dark" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                    <li class="soc-media__item"><a class="soc-media__link" href=""><svg class="soc-media__icon soc-media__icon--dark" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
                 </ul>
             </div>  
             <form class="subscribe-form">
@@ -216,9 +216,9 @@
                     />
                 </div>
                 <button type="submit" class="subscribe-button">Подписаться
-                <svg class="icon-send" width="24" height="24">
-                    <use href="./images/icons.svg#icon-send"></use>
-                </svg>
+                    <svg class="icon-send" width="24" height="24">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
                 
                 </button>
             </form>
