--- a/portfolio.html
+++ b/portfolio.html
@@ -14,27 +14,27 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="" class="logo"><span class="logo-accent">Web</span>Studio</a>
+            <a href="" class="logo header__logo"><span class="logo--accent">Web</span>Studio</a>
         
             <nav class="site-nav">
-                <ul class="list">
-                    <li class="site-nav-item"> <a class="site-nav-link" href="./index.html">Студия </a> </li>
-                    <li class="site-nav-item"> <a class="site-nav-link current-page" href="">Портфолио</a></li>
-                    <li class="site-nav-item"> <a class="site-nav-link" href="">Контакты</a></li>
+                <ul class="site-nav__list list">
+                    <li class="site-nav__item"> <a class="site-nav__link" href="./index.html">Студия </a> </li>
+                    <li class="site-nav__item"> <a class="site-nav__link  site-nav__link--current" href="">Портфолио</a></li>
+                    <li class="site-nav__item"> <a class="site-nav__link" href="">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="list contacts">
-                    <li class="contact-item">
-                         <a href="mailto:info@devstudio.com" class="contact-link">
-                            <svg class="contact-icon" width="16" height="12">
+                    <li class="contacts__item">
+                         <a href="mailto:info@devstudio.com" class="contacts__link">
+                            <svg class="contacts__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope"></use>
                             </svg> info@devstudio.com</a> </li>
-                    <li class="contact-item"><a href="tel:+380961111111" class="contact-link"><svg class="contact-icon" width="10" height="16">
+                    <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link"><svg class="contacts__icon" width="10" height="16">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
                 </ul>
         </div>
-    </header>     
+    </header>   
     <main>
         <!-- Наши проекты -->
         <section class="projects-section section">
