--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </section>
         <!-- Наша команда -->
-        <section class="members section">
+        <section class="members members-section">
             <div class="container">
                 <h2 class="members__title">Наша команда</h2>
                 <ul class="members-list list">
@@ -184,11 +184,11 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="adress-container">
+            <div class="address-container">
                 <a href="" class="logo footer__logo"><span class="logo--accent">Web</span>Studio</a>
                 <address class="address">
                 <p class="address__main"> г. Киев, пр-т Леси Украинки, 26</p>
-                    <ul class="adress__list list">
+                    <ul class="address__list list">
                         <li><a href="mailto:info@example.com" class="address__link">info@example.com</a></li>
                         <li><a href="tel:+380991111111" class="address__link">+38 099 111 11 11</a></li>
                     </ul>    
